# Barbershop

./: .gitignore  db.sqlite3  pyproject.toml  readme.md
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  views.py
core/migrations/: 0001_initial.py  0002_master_photo.py  0003_review_rating.py  0004_alter_master_options_alter_order_options_and_more.py  0005_alter_order_options_alter_review_options_and_more.py  0006_order_view_count.py
static/css/: admin.css  main.css
static/js/: main.js  order_form.js
templates/: base.html  include_master_card.html  include_menu.html  include_order_card.html  include_order_form.html  include_reviews_carousel.html  include_service_card.html  landing.html  order_class_form.html  order_detail.html  order_list.html  order_page.html  orders_list.html  review_class_form.html  service_class_form.html  service_form.html  services_list.html  thanks.html
